hard-gists/3427750/run.log
=== Docker Run Log for 3427750 ===
Started at: Mi 29. Okt 13:51:10 CET 2025

[2025-10-29 13:51:11] START: Running container for 3427750
[2025-10-29 13:51:11] SUCCESS: Container b5c5ce75e9aa37ca402232667bffa154c549821a1b1ea60c8c6669d4a37b2685 started for 3427750
=== Container logs for 3427750 ===
  File "/snippet.py", line 25
    print "Slider: %0.2f => %0.2f" % (val, newVal)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3427750 ===
[2025-10-29 13:51:13] INFO: Container b5c5ce75e9aa37ca402232667bffa154c549821a1b1ea60c8c6669d4a37b2685 has stopped
